--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/JorgeRodriguez1998/spiderverse/issues"
   },
-  "homepage": "https://github.com/JorgeRodriguez1998/spiderverse#readme"
+  "homepage": "https://github.com/JorgeRodriguez1998/spiderverse#readme",
+  "devDependencies": {
+    "jest": "^28.0.0"
+  }
 }
